k8s/Application/database.yml
# db deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: migration-scripts
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: migration-scripts
        configMap:
          name: migration-scripts

---
# db service
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
