k8s/Application/frontend.yml
# nextapp deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextapp
  template:
    metadata:
      labels:
        app: nextapp
    spec:
      containers:
      - name: nextapp
        image: kubesami/frontend:5285c5db15717622c3213e479d071e5f90789274
        ports:
        - containerPort: 3000
---
# nextapp service
apiVersion: v1
kind: Service
metadata:
  name: nextapp-service
spec:
  selector:
    app: nextapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
