k8s/Application/httproutes-nextjs.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: chat-nextjs
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
  hostnames:
  - "devopschat.xyz"
  rules:
  - backendRefs:
    - name: nextapp-service
      port: 80
